crates/kply-cli/tests/snapshots/cli__report_show_invalid_session.snap
---
source: crates/kply-cli/tests/cli.rs
expression: normalize_output(&stderr)
---
kply error: report show

session id must start and end with a lowercase ASCII letter or digit
