crates/kply-cli/tests/snapshots/cli__report_show_invalid_session_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "error": {
    "code": "report_show",
    "exit_code": 2,
    "message": "session id must start and end with a lowercase ASCII letter or digit"
  }
}
