crates/kply-cli/tests/snapshots/cli__route_apply_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "apply": false,
  "mutation": "not_applied",
  "namespace": "shop",
  "session_id": "checkout-plan",
  "status": "not_implemented"
}
