crates/kply-cli/tests/snapshots/cli__route_apply_missing_confirmation.snap
---
source: crates/kply-cli/tests/cli.rs
expression: normalize_output(&stderr)
---
kply error: route apply

route apply requires --confirm-route-mutation before route mutation can run
