crates/kply-cli/tests/snapshots/cli__route_apply_missing_confirmation_json.snap
---
source: crates/kply-cli/tests/cli.rs
expression: value
---
{
  "error": {
    "code": "route_apply",
    "exit_code": 2,
    "message": "route apply requires --confirm-route-mutation before route mutation can run"
  }
}
