crates/kply-cli/tests/snapshots/cli__route_apply_text.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
kply route apply checkout-plan
namespace: shop
status: not_implemented
mutation: not_applied
apply: false
