crates/kply-cli/tests/snapshots/cli__route_cleanup_invalid_session_id.snap
---
source: crates/kply-cli/tests/cli.rs
expression: normalize_output(&stderr)
---
kply error: route cleanup

session id must start and end with a lowercase ASCII letter or digit
