crates/kply-cli/tests/snapshots/cli__route_cleanup_text.snap
---
source: crates/kply-cli/tests/cli.rs
expression: output
---
kply route cleanup checkout-plan
status: planned
mutation: not_applied
cleanup: false
route_kind: HTTPRoute
cleanup_target: shop/HTTPRoute/checkout-plan-route
cleanup_selector: 2
  label: kply.dev/managed-by=kply
  label: kply.dev/session-id=checkout-plan
